tests/errors/sem.invalid-scope.jmp.or
main :: () -> void {
    x := true;
    if x {
        break;
    };
};
